# llm-loadbalancer

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  Untitled.ipynb  build_sft.sh  cat_db.py  collect_jsonl.py  collect_jsonl.py.bk  config.yaml  database.ipynb  example_config.yaml  keep_connection.py  llm_loadbalancer.sqlite3  load_balancer.py  load_balancer.py.bk  load_balancer_v2.py  main.py  pyproject.toml  run.sh  test.ipynb  test_openai.py
.agents/: prompt.txt
.ipynb_checkpoints/: Untitled-checkpoint.ipynb  database-checkpoint.ipynb  test-checkpoint.ipynb
docs/: qa.md  setup.md
monitor/: README.md  main.py  monitor.py  pyproject.toml
src/llm_loadbalancer/: __init__.py  cli.py  keep_connection.py  load_balancer.py
src/llm_loadbalancer/tools/: __init__.py  annotate_full_conversations.py  build_unique_conversation.py  cat_sft_messages.py  collect_jsonl.py  convert_to_sft_data.py  convert_to_sft_data_anthropic.py  convert_to_sft_data_openai.py  sft_settings.py
tests/: test_annotate_full_conversations.py  test_build_unique_conversation.py  test_cat_sft_messages.py  test_cli_regressions.py  test_collect_jsonl.py  test_convert_to_sft_data_anthropic.py  test_convert_to_sft_data_openai.py  test_load_balancer.py  test_load_balancer_v2.py  test_package_runtime.py  test_session_dedupe.py
tools/: assert_unique.py  collect_jsonl.py  convert_anthropic_messages_to_sft.py
tools/db/: count.py  query.py  send_request.py
