[project]
name = "llm-loadbalancer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "uvicorn>=0.44.0",
]

[project.scripts]
cat_db = "cat_db:main"
llm-proxy = "main:main"
llmproxy = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
only-include = [
    "cat_db.py",
    "main.py",
    "keep_connection.py",
    "load_balancer.py",
]

[dependency-groups]
dev = [
    "pyright>=1.1.408",
]
