[project]
name = "llm-loadbalancer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "pytest>=9.0.3",
    "speedy-utils",
    "tabulate>=0.9.0",
    "transformers>=5.5.4",
    "uvicorn>=0.44.0",
]

[project.scripts]
cat_db = "cat_db:main"
llm-proxy = "main:main"
collect-jsonl = "llm_loadbalancer.tools.collect_jsonl:main"
annotate-full-conversations = "llm_loadbalancer.tools.annotate_full_conversations:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.uv.sources]
speedy-utils = { path = "../speedy_utils" }

[tool.hatch.build.targets.wheel]
only-include = [
    "cat_db.py",
    "main.py",
    "keep_connection.py",
    "load_balancer.py",
    "load_balancer_v2.py",
    "src/llm_loadbalancer/__init__.py",
    "src/llm_loadbalancer/tools/__init__.py",
    "src/llm_loadbalancer/tools/collect_jsonl.py",
    "src/llm_loadbalancer/tools/annotate_full_conversations.py",
    "src/llm_loadbalancer/tools/convert_to_sft_data.py",
    "src/llm_loadbalancer/tools/convert_to_sft_data_anthropic.py",
    "src/llm_loadbalancer/tools/convert_to_sft_data_openai.py",
]

[tool.pytest.ini_options]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "pyright>=1.1.408",
]
