[project]
name = "llm-loadbalancer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "pytest>=9.0.3",
    "speedy-utils",
    "tabulate>=0.9.0",
    "tqdm>=4.67.1",
    "transformers>=5.5.4",
    "uvicorn>=0.44.0",
]

[project.scripts]
llm-proxy = "llm_loadbalancer.cli:main"
collect-jsonl = "llm_loadbalancer.tools.collect_jsonl:main"
build-unique-sft = "llm_loadbalancer.tools.build_unique_conversation:main"
annotate-full-conversations = "llm_loadbalancer.tools.annotate_full_conversations:main"
cat_sft_messages = "llm_loadbalancer.tools.cat_sft_messages:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.uv.sources]
speedy-utils = { path = "../speedy_utils", editable = true }

[tool.hatch.build.targets.wheel]
sources = ["src"]
only-include = [
    "src/llm_loadbalancer",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning:websockets\\.legacy",
    "ignore::DeprecationWarning:uvicorn\\.protocols\\.websockets\\.websockets_impl",
]

[dependency-groups]
dev = [
    "pyright>=1.1.408",
]
