[project]
name = "monitor"
version = "0.1.0"
description = "Read-only live monitor for llm-loadbalancer state"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "loguru>=0.7.3",
    "llm-loadbalancer",
    "uvicorn>=0.34.0",
]

[tool.uv.sources]
llm-loadbalancer = { path = ".." }
